--- a/article.html
+++ b/article.html
@@ -18,6 +18,7 @@
     <![endif]-->
   </head>
   <body>
+  <!-- 头部开始 -->
   <header>
   <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
   <div class="container">
@@ -79,10 +80,12 @@
   </div><!-- /.container-fluid -->
 </nav>
 </header>
+<!-- 头部结束 -->
 
-
+ <!-- 主体内容开始 -->
 <div class="container">
   <div class="row">
+  <!-- 左边侧边栏开始 -->
       <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
         <ul class="list-group">
           <li class="list-group-item">Cras justo odio</li>
@@ -92,124 +95,135 @@
           <li class="list-group-item">Vestibulum at eros</li>
         </ul>
       </div>
+      <!-- 左边侧边栏结束 -->
+
+      <!-- 右边瀑布流开始 -->
       <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
         <div class="main">
+           <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_00.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_01.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_02.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_03.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+           <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_04.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_05.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_06.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_07.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_08.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_09.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_010.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+           <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_011.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_012.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_013.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_014.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+           <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_015.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+           <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_016.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+          <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_017.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+           <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_018.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+           <!-- 瀑布流小块 -->
           <div class="box">
               <img src="images/P_019.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
-
+           <!-- 瀑布流小块 -->
            <div class="box">
               <img src="images/P_020.jpg" alt="">
-              <h1>翻墙指南</h1>       
+              <p>翻墙指南</p>       
           </div>
    
         </div>
 
-
-
-
       </div>
-
+      <!-- 右边瀑布流结束 -->
     </div>
+    
 
 </div>
-</div>
+<!-- 主体部分结束 -->
+
+ <!-- 底部开始 -->
+ <footer>
+   <div class="container">
+     <p>Copyright © 2016.kangml.com All rights reserved. <span><a href="">赞助</a></span></p>
+   </div>
+ </footer>
+ <!-- 底部结束 -->
+
 
 
 
