--- a/download.html
+++ b/download.html
@@ -82,7 +82,8 @@
   <div class="container">
     <h1>资源下载top250</h1>
     <div class="row">
-    <!-- 正文左边 -->
+
+    <!-- 正文左边文章栏开始 -->
       <div class="col-md-8">
         <div class="box">
           <div class="row">
@@ -104,9 +105,11 @@
         <div class="box">
           <div class="row">
             <div class="col-md-2">
+            <!-- 盒子左边资源下载图片 -->
               <img src="images/7.jpg" alt="">
             </div>
             <div class="col-md-10">
+            <!-- 盒子右边资源文字描述和下载按钮 -->
               <p>
 肖申克的救赎  / The Shawshank Redemption  / 月黑高飞(港) / 刺激1995(台) </p>
               <a href="#">
@@ -256,17 +259,40 @@
           </div>
         </div>
       </div>
-      <!-- 正文右边 -->
+      <!-- 正文左边文章栏结束  -->
+
+      <!-- 正文右边开始 -->
       <div class="col-md-4">
-        <p>豆瓣用户每天都在对“看过”的电影进行“很差”到“力荐”的评价，豆瓣根据每部影片看过的人数以及该影片所得的评价等综合数据，通过算法分析产生豆瓣电影250。
-        </p>
-        <div class="ad">
-          <img src="images/6.jpg" alt="">
-        </div>
-      </div>
+           <div class="list-group">
+              <a href="#" class="list-group-item active">
+                Cras justo odio
+              </a>
+              <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+              <a href="#" class="list-group-item">Morbi leo risus</a>
+              <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+              <a href="#" class="list-group-item">Vestibulum at eros</a>
+          </div>
+
+            <p>豆瓣用户每天都在对“看过”的电影进行“很差”到“力荐”的评价，豆瓣根据每部影片看过的人数以及该影片所得的评价等综合数据，通过算法分析产生豆瓣电影250。
+            </p>
+            <div class="ad">
+              <img src="images/6.jpg" alt="">
+            </div>
+       </div>     
+      <!-- 正文右边结束 -->
     </div>
   </div>
 </div>
+     <!-- 正文结束 -->
+
+
+  <!-- 底部开始 -->
+ <footer>
+   <div class="container">
+     <p>Copyright © 2016.kangml.com All rights reserved. <span><a href="">赞助</a></span></p>
+   </div>
+ </footer>
+ <!-- 底部结束 -->
 
     <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
