--- a/login_register.html
+++ b/login_register.html
@@ -46,7 +46,7 @@
                <label class="input-tips" for="p">密&nbsp;&nbsp;&nbsp;码：</label> 
                <div class="inputOuter" id="pArea">
                     
-                    <input type="password" id="p" name="p" class="inputstyle required"/>
+                    <input type="password" id="p" name="password" class="inputstyle required"/>
                 </div>
                 </div>
                
