--- a/sendemail.html
+++ b/sendemail.html
@@ -21,7 +21,7 @@
 <!-- 正文开始 -->
 <div class="container">
   <div class="jumbotron">
-  <p>我们已经向您发送一封验证邮件，请到您的邮箱验证注册</p>
+  <p>注册成功，我们已经向您发送一封验证邮件，请到您的邮箱验证</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">邮箱验证</a></p>
   <p><a href="login_register.html">点击关闭</a></p>
 </div>
