--- a/about.html
+++ b/about.html
@@ -5,20 +5,41 @@
 	<title>about</title>
 </head>
 <link rel="stylesheet" href="css/about.css">
-<body>
-	<div class="container">
-		<div class="sections">
-			<div class="section" id="section0"><h3>this is the page</h3></div>
-			<div class="section" id="section1"><h3>this is the page</h3></div>
-			<div class="section" id="section2"><h3>this is the page</h3></div>
-			
-
-
-		</div>
-  
-	</div>
-</body>
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/pageswitch.js"></script>
+<body>
+<div id="container" data-PageSwitch>
+		<div class="sections">
+			<div class="section active" id="section0">
+				<div class="intro">
+					<h1 class="title">mkStone</h1>
+					<p>我们是一个团队！</p>
+
+			    </div>
+			</div>
+			<div class="section" id="section1">
+				<div class="intro">
+					<h1 class="title">mkStone</h1>
+					<p>网站正在搭建中……</p>
+			
+				</div>
+			</div>
+			<div class="section" id="section2">
+				<div class="intro">
+					<h1 class="title">mkStone</h1>
+					<p>网站正在搭建中……</p>
+					
+				</div>
+			</div>
+			<div class="section" id="section3">
+				<div class="intro">
+					<h1 class="title">THE END</h1>
+					<p>Everything will be okay in the end. If it's not okay, it's not the end.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+
 
 </html>
