XNJ mkStone 1.0.6 添加下载页面
添加下载页面

--- a/download.html
+++ b/download.html
@@ -39,7 +39,7 @@
             <li><a href="article.html">文章</a></li>
             <li><a href="#">问答</a></li>
             <li class="active"><a href="download.html">资源</a></li>
-            <li><a href="#">关于</a></li>
+            <li><a href="about.html">关于</a></li>
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
@@ -93,8 +93,8 @@
             <div class="col-md-10">
               <p>
 肖申克的救赎  / The Shawshank Redemption  / 月黑高飞(港) / 刺激1995(台) </p>
-              <a href="#">
-              	<button type="button" class="btn btn-primary">
+              <a href="single.html">
+              	<button type="button" class="btn btn-primary" >
                    点击下载
               	</button>
               </a>
