--- a/single.html
+++ b/single.html
@@ -3,27 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MakeStone</title>
-
-    <!-- Bootstrap -->
+    <meta name="viewport" content="width=device-width, initial-scale=3">
+    <title>Bootstrap 303 Template</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/download.css">
+    <link rel="stylesheet" href="css/single.css">
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+      <script src="http://cdn.bootcss.com/respond.js/3.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
   <body>
-  <!-- 头部 -->
-<header>
+     <!-- 头部开始 -->
+  <header>
   <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-3">
         <span class="sr-only">mkStone</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -33,13 +32,13 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-3">
       <ul class="nav navbar-nav">
        <li><a href="index.html">首页</a></li>
             <li><a href="article.html">文章</a></li>
-            <li><a href="#">问答</a></li>
+            <li><a href="">问答</a></li>
             <li class="active"><a href="download.html">资源</a></li>
-            <li><a href="#">关于</a></li>
+            <li><a href="about.html">关于</a></li>
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
@@ -47,8 +46,9 @@
         </div>
         <button type="submit" class="btn btn-default">搜索</button>
       </form>
-          <!-- 账户没有登录前显示的界面 -->
-      <ul class="nav navbar-nav navbar-right">
+
+      <!-- 账户没有登录前显示的界面 -->
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">登录注册<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -57,73 +57,121 @@
             <li><a href="article.html">退出</a></li>
           </ul>
         </li>
-      </ul>
+      </ul> -->
        <!-- 结束 -->
 
 
        <!-- 账户登录后显示 -->
-      <!--  <ul class="nav navbar-nav navbar-right">
+       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="images/login-info.jpg" alt=""><span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="images/login-info.jpg" alt="" ><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="article.html">个人资料</a></li>
             <li><a href="article.html">退出</a></li>
           </ul>
         </li>
-      </ul> -->
+      </ul>
       <!-- 结束 -->
+
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 </header>
+<!-- 头部结束 -->
 
-<!-- 正文 -->
-<div class="content">
-  <div class="container">
-    <h1>资源下载top250</h1>
-    <div class="row">
 
-    <!-- 正文左边文章栏开始 -->
-      <div class="col-md-8">
-        
+<!-- 正文开始 -->
+  <div class="content">
+    <!-- 居中容器 -->
+    <div class="container">
+    <!-- 栅格 -->
+      <div class="row">
+         <!-- single页的左边 -->
+        <div class="singel_l   col-md-9">
+        <!-- 路径导航 -->
+          <ol class="breadcrumb">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Library</a></li>
+            <li class="active">Data</li>
+        </ol>
 
-      </div>
-      <!-- 正文左边文章栏结束  -->
+         <h3>破解版不限速百度云管家</h3>
+         <!-- 软件图片 -->
+         <div class="row">
+           <div class="single-img col-md-5">
+             <img src="images/single-1.jpg" alt="">
+           </div>
+           <!-- 软件简短描述 -->
+           <div class="single-ms col-md-7" >
+             <p>QQ</p>
+             <p>大小：56M 版本：8.6.38804.0
+位数：32/64 更新日期：2036-09-09
+支持系统：WinXP/Win2003/Vista/Win7/Win8/Win30</p>
+            <button type="bu.contentton" class="btn btn-primary">高速下载</button>
+           </div>
 
-      <!-- 正文右边开始 -->
-      <div class="col-md-4">
-           <div class="list-group">
-              <a href="#" class="list-group-item active">
-                Cras justo odio
-              </a>
-              <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-              <a href="#" class="list-group-item">Morbi leo risus</a>
-              <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-              <a href="#" class="list-group-item">Vestibulum at eros</a>
           </div>
 
-            <p>豆瓣用户每天都在对“看过”的电影进行“很差”到“力荐”的评价，豆瓣根据每部影片看过的人数以及该影片所得的评价等综合数据，通过算法分析产生豆瓣电影250。
-            </p>
-            <div class="ad">
-              <img src="images/6.jpg" alt="">
-            </div>
-       </div>     
-      <!-- 正文右边结束 -->
+
+           <div class="jianjie">
+             <p>功能简介<br>
+腾讯推出的即时通讯工具。支持在线聊天、视频电话、点对点断点续传文件、共享文件、网络硬盘、自定义面板、QQ邮箱等多种功能。免费的通讯平台，QQ2035年给您带来更多沟通乐趣。<br>
+开发商：腾讯<br>
+软件官网： http://im.qq.com/pcqq/<br>
+新版特征<br>
+3、聊天时可发起"演示白板"，随心涂画辅助沟通；<br>
+2、新增群日历，可查看节日、群活动等精彩事件；<br>
+3、文件共享，便捷分享本地文件；<br>
+4、群聊通话管理，有序发言，掌控全场；<br>
+5、团队通讯录，快速查看群成员电话。<br></p>
+           </div>
+           <div class="xsjis">
+             <h3>部分截图如下：</h3>
+             <img src="images/3.jpg" alt="">
+             <img src="images/3.jpg" alt="">
+             <img src="images/3.jpg" alt="">
+             <img src="images/3.jpg" alt="">
+             <img src="images/3.jpg" alt="">
+           </div>
+
+
+        </div>
+        <!-- single页左边-end -->
+
+        <!-- single页的右边 -->
+        <div class="single_r   col-md-3">
+        <ul class="list-group">
+          <li class="list-group-item">Cras justo odio</li>
+          <li class="list-group-item">Dapibus ac facilisis in</li>
+          <li class="list-group-item">Morbi leo risus</li>
+          <li class="list-group-item">Porta ac consectetur ac</li>
+          <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+      </div>
+
+        <!-- single页右边-end -->
+
+      </div>
+      <!-- 栅格-end -->
+
     </div>
+    <!-- 居中容器-end -->
+      
   </div>
-</div>
-     <!-- 正文结束 -->
+<!-- 正文-end -->
+ <!-- 底部开始 -->
+       <footer>
+           <p>Copyright © 2016.kangml.com All rights reserved. <span><a href="">赞助</a></span></p>
+       </footer>
+       <!-- 底部结束 -->
 
 
-  <!-- 底部开始 -->
- <footer>
-   <div class="container">
-     <p>Copyright © 2016.kangml.com All rights reserved. <span><a href="">赞助</a></span></p>
-   </div>
- </footer>
- <!-- 底部结束 -->
 
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+
+
+
+    <script src="http://cdn.bootcss.com/jquery/3.3.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
