--- a/about.html
+++ b/about.html
@@ -31,7 +31,21 @@
 					
 				</div>
 			</div>
+
 			<div class="section" id="section3">
+				<div class="intro">
+					<h1 class="title">THE END</h1>
+					<p>Everything will be okay in the end. If it's not okay, it's not the end.</p>
+				</div>
+			</div>
+			<div class="section" id="section4">
+				<div class="intro">
+					<h1 class="title">mkStone</h1>
+					<p>网站正在搭建中……</p>
+			
+				</div>
+			</div>
+			<div class="section" id="section5">
 				<div class="intro">
 					<h1 class="title">THE END</h1>
 					<p>Everything will be okay in the end. If it's not okay, it's not the end.</p>
