--- a/download.html
+++ b/download.html
@@ -17,8 +17,8 @@
     <![endif]-->
   </head>
   <body>
-  <!-- 头部 -->
-<header>
+  <!-- 头部开始 -->
+  <header>
   <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -37,7 +37,7 @@
       <ul class="nav navbar-nav">
        <li><a href="index.html">首页</a></li>
             <li><a href="article.html">文章</a></li>
-            <li><a href="#">问答</a></li>
+            <li><a href="">问答</a></li>
             <li class="active"><a href="download.html">资源</a></li>
             <li><a href="about.html">关于</a></li>
       </ul>
@@ -47,8 +47,9 @@
         </div>
         <button type="submit" class="btn btn-default">搜索</button>
       </form>
-          <!-- 账户没有登录前显示的界面 -->
-      <ul class="nav navbar-nav navbar-right">
+
+      <!-- 账户没有登录前显示的界面 -->
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">登录注册<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -57,25 +58,28 @@
             <li><a href="article.html">退出</a></li>
           </ul>
         </li>
-      </ul>
+      </ul> -->
        <!-- 结束 -->
 
 
        <!-- 账户登录后显示 -->
-      <!--  <ul class="nav navbar-nav navbar-right">
+       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="images/login-info.jpg" alt=""><span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="images/login-info.jpg" alt="" ><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="article.html">个人资料</a></li>
             <li><a href="article.html">退出</a></li>
           </ul>
         </li>
-      </ul> -->
+      </ul>
       <!-- 结束 -->
+
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 </header>
+<!-- 头部结束 -->
 
 <!-- 正文 -->
 <div class="content">
@@ -276,7 +280,7 @@
             <p>豆瓣用户每天都在对“看过”的电影进行“很差”到“力荐”的评价，豆瓣根据每部影片看过的人数以及该影片所得的评价等综合数据，通过算法分析产生豆瓣电影250。
             </p>
             <div class="ad">
-              <img src="images/6.jpg" alt="">
+              <img src="images/erweima.jpg" alt="">
             </div>
        </div>     
       <!-- 正文右边结束 -->
