--- a/admin/Art.html
+++ b/admin/Art.html
@@ -2,7 +2,7 @@
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>adimin </title>
+<title>Admin-Article</title>
 <meta name="Copyright" content="Douco Design.">
 <link href="./admin/public.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="./admin/jquery.min.js.下载"></script>
@@ -53,20 +53,20 @@
   <li><a href=""><i class="show"></i><em>首页幻灯广告</em></a></li>
   <li><a href=""><i class="page"></i><em>单页面管理</em></a></li>
  </ul> -->
-   <ul>
-  <li><a href=""><i class="productCat"></i><em>查看会员</em></a></li>
-  <li><a href=""><i class="product"></i><em>查看资源</em></a></li>
+    <ul>
+  <li><a href="user.html"><i class="productCat"></i><em>查看会员</em></a></li>
+  <li><a href="resouce.html"><i class="product"></i><em>查看资源</em></a></li>
  </ul>
   <ul>
-  <li><a href=""><i class="articleCat"></i><em>文章分类</em></a></li>
-  <li><a href=""><i class="article"></i><em>文章列表</em></a></li>
+  <li><a href="ArtType.html"><i class="articleCat"></i><em>文章分类</em></a></li>
+  <li class="cur"><a href="Art.html"><i class="article"></i><em>文章列表</em></a></li>
  </ul>
    <ul class="bot">
 <!--   <li><a href=""><i class="backup"></i><em>数据备份</em></a></li>
   <li><a href=""><i class="mobile"></i><em>手机版</em></a></li>
   <li><a href=""><i class="theme"></i><em>设置模板</em></a></li>
   <li><a href=""><i class="manager"></i><em>网站管理员</em></a></li> -->
-  <li class="cur"><a href=""><i class="managerLog"></i><em>操作记录</em></a></li>
+  <li><a href="admin.html"><i class="managerLog"></i><em>操作记录</em></a></li>
  </ul>
 </div></div>
  <div id="dcMain">
@@ -94,7 +94,7 @@
       <th width="22" align="center"><input name="chkall" type="checkbox" id="chkall" onclick="selectcheckbox(this.form)" value="check"></th>
       <th width="40" align="center">编号</th>
       <th align="left">文章名称</th>
-      <th width="150" align="center">文章分类</th>
+      <th width="150" align="center">文章标题</th>
       <th width="80" align="center">添加日期</th>
       <th width="80" align="center">操作</th>
      </tr>
