--- a/admin/resouce.html
+++ b/admin/resouce.html
@@ -2,7 +2,7 @@
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>Admin-ArticleType </title>
+<title>adimin </title>
 <meta name="Copyright" content="Douco Design.">
 <link href="./admin/public.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="./admin/jquery.min.js.下载"></script>
@@ -53,12 +53,12 @@
   <li><a href=""><i class="show"></i><em>首页幻灯广告</em></a></li>
   <li><a href=""><i class="page"></i><em>单页面管理</em></a></li>
  </ul> -->
-    <ul>
+   <ul>
   <li><a href="user.html"><i class="productCat"></i><em>查看会员</em></a></li>
-  <li><a href="resouce.html"><i class="product"></i><em>查看资源</em></a></li>
+  <li  class="cur"><a href="resouce.html"><i class="product"></i><em>查看资源</em></a></li>
  </ul>
   <ul>
-  <li class="cur"><a href="ArtType.html"><i class="articleCat"></i><em>文章分类</em></a></li>
+  <li><a href="ArtType.html"><i class="articleCat"></i><em>文章分类</em></a></li>
   <li><a href="Art.html"><i class="article"></i><em>文章列表</em></a></li>
  </ul>
    <ul class="bot">
@@ -71,14 +71,14 @@
 </div></div>
  <div id="dcMain">
    <!-- 当前位置 -->
-<div id="urHere">DouPHP 管理中心<b>&gt;</b><strong>文章分类</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-    <h3>文章分类</h3>
+<div id="urHere">DouPHP 管理中心<b>&gt;</b><strong>查看资源</strong> </div>   <div id="manager" class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+    <h3>查看资源</h3>
                     <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
-     <tbody><tr>
+       <tbody><tr>
       <th width="30" align="center">编号</th>
-      <th width="150" align="left">分类名称</th>
+      <th width="150" align="left">标题</th>
       <th width="100" align="center">别名</th>
-      <th align="left">简单描述</th>
+      <th align="left">路径</th>
       <th width="100" align="center">操作</th>
      </tr>
           <tr>
