--- a/admin/admin.html
+++ b/admin/admin.html
@@ -54,19 +54,19 @@
   <li><a href=""><i class="page"></i><em>单页面管理</em></a></li>
  </ul> -->
    <ul>
-  <li><a href=""><i class="productCat"></i><em>查看会员</em></a></li>
-  <li><a href=""><i class="product"></i><em>查看资源</em></a></li>
+  <li><a href="user.html"><i class="productCat"></i><em>查看会员</em></a></li>
+  <li><a href="resouce.html"><i class="product"></i><em>查看资源</em></a></li>
  </ul>
   <ul>
-  <li><a href=""><i class="articleCat"></i><em>文章分类</em></a></li>
-  <li><a href=""><i class="article"></i><em>文章列表</em></a></li>
+  <li><a href="ArtType.html"><i class="articleCat"></i><em>文章分类</em></a></li>
+  <li><a href="Art.html"><i class="article"></i><em>文章列表</em></a></li>
  </ul>
    <ul class="bot">
 <!--   <li><a href=""><i class="backup"></i><em>数据备份</em></a></li>
   <li><a href=""><i class="mobile"></i><em>手机版</em></a></li>
   <li><a href=""><i class="theme"></i><em>设置模板</em></a></li>
   <li><a href=""><i class="manager"></i><em>网站管理员</em></a></li> -->
-  <li class="cur"><a href=""><i class="managerLog"></i><em>操作记录</em></a></li>
+  <li class="cur"><a href="admin.html"><i class="managerLog"></i><em>操作记录</em></a></li>
  </ul>
 </div></div>
  <div id="dcMain">
