--- a/ask.html
+++ b/ask.html
@@ -40,8 +40,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
        <li><a href="index.html">首页</a></li>
-            <li class="active"><a href="article.html">文章</a></li>
-            <li><a href="">问答</a></li>
+            <li ><a href="article.html">文章</a></li>
+            <li class="active"><a href="">问答</a></li>
             <li><a href="download.html">资源</a></li>
             <li><a href="about.html">关于</a></li>
       </ul>
