--- a/ask.html
+++ b/ask.html
@@ -23,8 +23,8 @@
   
   
 <header class="">
-    <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
-  <div class="container">
+    <nav class="navbar navbar-fixed-top navbar-default " role="navigation">
+ <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -40,20 +40,14 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
        <li><a href="index.html">首页</a></li>
-            <li ><a href="article.html">文章</a></li>
-            <li class="active"><a href="">问答</a></li>
+            <li class="active"><a href="article.html">文章</a></li>
+            <li><a href="">问答</a></li>
             <li><a href="download.html">资源</a></li>
             <li><a href="about.html">关于</a></li>
       </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">搜索</button>
-      </form>
-
+      
       <!-- 账户没有登录前显示的界面 -->
-      <!-- <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">登录注册<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -62,25 +56,27 @@
             <li><a href="article.html">退出</a></li>
           </ul>
         </li>
-      </ul> -->
+      </ul>
        <!-- 结束 -->
 
 
        <!-- 账户登录后显示 -->
-       <ul class="nav navbar-nav navbar-right">
+  <!--      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="images/login-info.jpg" alt="" ><span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="images/artical_09.png"  alt="" ><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="article.html">个人资料</a></li>
             <li><a href="article.html">退出</a></li>
           </ul>
         </li>
-      </ul>
+      </ul> -->
       <!-- 结束 -->
 
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+
+  <!-- menu -->
    <a id="cd-menu-trigger" href="" class=""><span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span></a>
 </nav>
    
@@ -256,57 +252,57 @@
   <nav id="cd-lateral-nav" class="">
     <ul class="cd-navigation">
       <li class="item-has-children">
-        <a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Services</a>
+        <a href="">Services</a>
         <ul class="sub-menu">
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Brand</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Web Apps</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Mobile Apps</a></li>
+          <li><a href="">Brand</a></li>
+          <li><a href="">Web Apps</a></li>
+          <li><a href="">Mobile Apps</a></li>
         </ul>
       </li> <!-- item-has-children -->
 
       <li class="item-has-children">
-        <a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Products</a>
+        <a href="">Products</a>
         <ul class="sub-menu">
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Product 1</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Product 2</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Product 3</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Product 4</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Product 5</a></li>
+          <li><a href="">Product 1</a></li>
+          <li><a href="">Product 2</a></li>
+          <li><a href="">Product 3</a></li>
+          <li><a href="">Product 4</a></li>
+          <li><a href="">Product 5</a></li>
         </ul>
       </li> <!-- item-has-children -->
 
       <li class="item-has-children">
-        <a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Stockists</a>
+        <a href="">Stockists</a>
         <ul class="sub-menu">
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">London</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">New York</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Milan</a></li>
-          <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Paris</a></li>
+          <li><a href="">London</a></li>
+          <li><a href="">New York</a></li>
+          <li><a href="">Milan</a></li>
+          <li><a href="">Paris</a></li>
         </ul>
       </li> <!-- item-has-children -->
     </ul> <!-- cd-navigation -->
 
     <ul class="cd-navigation cd-single-item-wrapper">
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Tour</a></li>
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Login</a></li>
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Register</a></li>
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Pricing</a></li>
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Support</a></li>
+      <li><a href="">Tour</a></li>
+      <li><a href="">Login</a></li>
+      <li><a href="">Register</a></li>
+      <li><a href="">Pricing</a></li>
+      <li><a href="">Support</a></li>
     </ul> <!-- cd-single-item-wrapper -->
 
     <ul class="cd-navigation cd-single-item-wrapper">
-      <li><a class="current" href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Journal</a></li>
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">FAQ</a></li>
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Terms &amp; Conditions</a></li>
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Careers</a></li>
-      <li><a href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Students</a></li>
+      <li><a class="current" href="">Journal</a></li>
+      <li><a href="">FAQ</a></li>
+      <li><a href="">Terms &amp; Conditions</a></li>
+      <li><a href="">Careers</a></li>
+      <li><a href="">Students</a></li>
     </ul> <!-- cd-single-item-wrapper -->
 
     <div class="cd-navigation socials">
-      <a class="cd-twitter cd-img-replace" href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Twitter</a>
-      <a class="cd-github cd-img-replace" href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Git Hub</a>
-      <a class="cd-facebook cd-img-replace" href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Facebook</a>
-      <a class="cd-google cd-img-replace" href="http://demo.htmleaf.com/1412/201412111806/index.html#0">Google Plus</a>
+      <a class="cd-twitter cd-img-replace" href="">Twitter</a>
+      <a class="cd-github cd-img-replace" href="">Git Hub</a>
+      <a class="cd-facebook cd-img-replace" href="">Facebook</a>
+      <a class="cd-google cd-img-replace" href="">Google Plus</a>
     </div> <!-- socials -->
   </nav>
   
