--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
   </div>
 
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+ <!--  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
     <span class="sr-only">Next</span>
-  </a>
+  </a> -->
 </div>
        <!--  <h2>mkStone网站正在搭建中……</h2>
         <div type="button" data-toggle="modal" data-target="#myModal" class="btn btn-outline btn-lg">查看介绍</div> -->
