--- a/article.html
+++ b/article.html
@@ -39,7 +39,7 @@
       <ul class="nav navbar-nav">
        <li><a href="index.html">首页</a></li>
             <li class="active"><a href="article.html">文章</a></li>
-            <li><a href="">问答</a></li>
+            <li><a href="ask.html">问答</a></li>
             <li><a href="download.html">资源</a></li>
             <li><a href="about.html">关于</a></li>
       </ul>
