--- a/download.html
+++ b/download.html
@@ -29,7 +29,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">mkStone</a>
+      <img src="images/artical_03.png" alt="">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
