--- a/single.html
+++ b/single.html
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">mkStone</a>
+      <img src="images/artical_03.png" alt="">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -103,7 +103,7 @@
            <div class="single-ms col-md-8" >
              <p><span>大小</span>：56M <span><br>版本</span>：8.6.38804.0<br>
 <span>位数</span>：32/64 <br><span>更新日期</span>：2036-09-09<br>
-<span>支持系统</span>：WinXP/Win2003/Vista/Win7/Win8/Win30</p>
+<span>支持系统</span>：WinXP/Win7/Win8/Win10</p>
             <a href="#"><button type="bu.contentton" class="btn btn-primary">高速下载</button></a>
            </div>
 
